--- a/exp3.6.left_right.ipynb
+++ b/exp3.6.left_right.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,19 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decimation factor is 6\n"
+      "Decimation factor is tensor([[6]])\n"
      ]
     }
    ],
    "source": [
     "# Generate Environments on which to learn\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "high_res_delta = 1e-0  # For generating the dataset and later sample\n",
     "baseline_rates = {\"lam\": 1 / 10, \"mu\": 4 / 10}\n",
     "epochs = 300\n",
@@ -67,9 +77,9 @@
     "    avg_span / high_res_delta\n",
     ") * 4  # Max decimation factor #CHECK: Maybe not divide by 2\n",
     "decimation_steps = [-8,-4,-2,-1,0,1,2,4,8]\n",
-    "current_decimation_factor = int(  # We can start somewhere in between\n",
+    "current_decimation_factor = torch.Tensor([int(  # We can start somewhere in between\n",
     "    avg_span // high_res_delta\n",
-    ")\n",
+    ")]).to(torch.long).to(device).view(-1,1)# View is because we might want to batch it\n",
     "print(f\"Decimation factor is {current_decimation_factor}\")\n",
     "# Set random seed with time for randomnessj"
    ]
@@ -83,21 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ottersome/miniconda3/envs/research/lib/python3.9/site-packages/torch/cuda/__init__.py:138: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize context first\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "state_generator = BDStates(baseline_rates, high_res_delta, num_states)\n",
     "# sampling_arbiter.initialize_grad_hooks()\n",
     "reconstructor = RNNReconstructor(\n",
@@ -117,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4431f79f39b64e6f869aad1e013804c6",
+       "model_id": "d44067971aa54498b010aebca706e74a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2cbf52dfeda4f3aaea18529d4f07cbe",
+       "model_id": "3c6c6746dec240bea1dab19c51e3faf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,15 +149,14 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "slice step cannot be zero",
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got int",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb Cell 7\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m non_amb_state \u001b[39m=\u001b[39m (\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     torch\u001b[39m.\u001b[39mcat((one_hot_cur_state, dec_steps), dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39mfloat)\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m )\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m,sampling_budget,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m val_ests\u001b[39m.\u001b[39mappend(valueEst(non_amb_state)\u001b[39m.\u001b[39mto(device))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m new_state, regret, done \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(sampled_action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m new_state_w_rate \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m         (\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m             torch\u001b[39m.\u001b[39mTensor([current_decimation_factor])\u001b[39m.\u001b[39mto(device)\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m         dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m states\u001b[39m.\u001b[39mappend(new_state_w_rate\u001b[39m.\u001b[39mto(device))\n",
-      "File \u001b[0;32m~/Research/SamplingReconstruction/samprecon/environments/OneEpisodeEnvironments.py:104\u001b[0m, in \u001b[0;36mMarkovianUniformCumulativeEnvironment.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     99\u001b[0m regret \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcriterion(logsoft_recon, new_state\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39mlong))\n\u001b[1;32m    101\u001b[0m \u001b[39m# self.prev_state = new_state.to(torch.float)\u001b[39;00m\n\u001b[1;32m    103\u001b[0m \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m--> 104\u001b[0m     new_state[:: \u001b[39mint\u001b[39;49m(action)][: \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_budget]\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m    105\u001b[0m     regret,\n\u001b[1;32m    106\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdone,\n\u001b[1;32m    107\u001b[0m )\n",
-      "\u001b[0;31mValueError\u001b[0m: slice step cannot be zero"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m log_probs \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m val_ests \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m states \u001b[39m=\u001b[39m [\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     torch\u001b[39m.\u001b[39;49mcat(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m         (\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m             current_decimation_factor,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m             env\u001b[39m.\u001b[39;49mreset(current_decimation_factor)\u001b[39m.\u001b[39;49mview(\u001b[39m1\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\u001b[39m.\u001b[39;49mto(device),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m         ),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m         dim\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(lenth_of_episode):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m# with torch.autograd.set_detect_anomaly(True):\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     cur_state \u001b[39m=\u001b[39m states[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got int"
      ]
     }
    ],
@@ -197,7 +196,7 @@
     "    states = [\n",
     "        torch.cat(\n",
     "            (\n",
-    "                torch.Tensor([current_decimation_factor]).to(device).view(1,1),\n",
+    "                current_decimation_factor,\n",
     "                env.reset(current_decimation_factor).view(1, -1).to(device),\n",
     "            ),\n",
     "            dim=-1,\n",
@@ -214,14 +213,15 @@
     "            device\n",
     "        )  # So as to not sample 0 (and end up dividing by zero)\n",
     "        \n",
-    "        current_decimation_factor += decimation_steps[sampled_action.item()]\n",
+    "        current_decimation_factor += torch.Tensor(decimation_steps[sampled_action.item()]).to(torch.long).to(device)\n",
     "        current_decimation_factor = max(1,min(current_decimation_factor, max_decimation))\n",
     "        \n",
+    "        #TODO: Make batch friendly\n",
     "        dec_steps = (\n",
     "            torch.arange(\n",
     "                0,\n",
-    "                current_decimation_factor * sampling_budget,\n",
-    "                current_decimation_factor,\n",
+    "                current_decimation_factor.squeeze() * sampling_budget,\n",
+    "                current_decimation_factor.squeeze(),\n",
     "            )\n",
     "            .view(-1, 1)\n",
     "            .to(device)\n",
@@ -234,11 +234,11 @@
     "        ).view(1,sampling_budget,-1)\n",
     "        val_ests.append(valueEst(non_amb_state).to(device))\n",
     "\n",
-    "        new_state, regret, done = env.step(sampled_action)\n",
+    "        new_state, regret, done = env.step(current_decimation_factor)\n",
     "\n",
     "        new_state_w_rate = torch.cat(\n",
     "                (\n",
-    "                    torch.Tensor([current_decimation_factor]).to(device).view(1,1),\n",
+    "                    current_decimation_factor,\n",
     "                    new_state\n",
     "                ),\n",
     "                dim=-1,\n",
@@ -246,7 +246,7 @@
     "\n",
     "        states.append(new_state_w_rate.to(device))\n",
     "        rewards.append(regret)\n",
-    "        log_probs.append(dist.log_prob(sampled_action - 1))\n",
+    "        log_probs.append(dist.log_prob(sampled_action))\n",
     "\n",
     "        sbar.set_description(f\"At step {step}, Regret: {regret}\")\n",
     "        sbar.update(1)\n",
@@ -417,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
