--- a/experiments/reconstructions/exp3.6.left_right.ipynb
+++ b/experiments/reconstructions/exp3.6.left_right.ipynb
@@ -15,18 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -50,20 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decimation factor is tensor([[6]])\n"
+      "Decimation factor is 6\n"
      ]
     }
    ],
    "source": [
     "# Generate Environments on which to learn\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "high_res_delta = 1e-0  # For generating the dataset and later sample\n",
     "baseline_rates = {\"lam\": 1 / 10, \"mu\": 4 / 10}\n",
     "epochs = 300\n",
@@ -77,9 +67,9 @@
     "    avg_span / high_res_delta\n",
     ") * 4  # Max decimation factor #CHECK: Maybe not divide by 2\n",
     "decimation_steps = [-8,-4,-2,-1,0,1,2,4,8]\n",
-    "current_decimation_factor = torch.Tensor([int(  # We can start somewhere in between\n",
+    "current_decimation_factor = int(  # We can start somewhere in between\n",
     "    avg_span // high_res_delta\n",
-    ")]).to(torch.long).to(device).view(-1,1)# View is because we might want to batch it\n",
+    ")\n",
     "print(f\"Decimation factor is {current_decimation_factor}\")\n",
     "# Set random seed with time for randomnessj"
    ]
@@ -93,11 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ottersome/miniconda3/envs/research/lib/python3.9/site-packages/torch/cuda/__init__.py:138: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize context first\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "state_generator = BDStates(baseline_rates, high_res_delta, num_states)\n",
     "# sampling_arbiter.initialize_grad_hooks()\n",
     "reconstructor = RNNReconstructor(\n",
@@ -116,14 +116,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d44067971aa54498b010aebca706e74a",
+       "model_id": "33a4c2e0bea14939bf4fa21d336a6f71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +142,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c6c6746dec240bea1dab19c51e3faf3",
+       "model_id": "81439f624d4f449a9248b81236057fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,13 +155,16 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "expected Tensor as element 0 in argument 0, but got int",
+     "evalue": "'int' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m log_probs \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m val_ests \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m states \u001b[39m=\u001b[39m [\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     torch\u001b[39m.\u001b[39;49mcat(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m         (\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m             current_decimation_factor,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m             env\u001b[39m.\u001b[39;49mreset(current_decimation_factor)\u001b[39m.\u001b[39;49mview(\u001b[39m1\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\u001b[39m.\u001b[39;49mto(device),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m         ),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m         dim\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mfor\u001b[39;00m step \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(lenth_of_episode):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m# with torch.autograd.set_detect_anomaly(True):\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/rac716/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     cur_state \u001b[39m=\u001b[39m states[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got int"
+      "\u001b[1;32m/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb Cell 8\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m non_amb_state \u001b[39m=\u001b[39m (\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     torch\u001b[39m.\u001b[39mcat((one_hot_cur_state, dec_steps), dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39mfloat)\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m )\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m,sampling_budget,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m val_ests\u001b[39m.\u001b[39mappend(valueEst(non_amb_state)\u001b[39m.\u001b[39mto(device))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m new_state, regret, done \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(current_decimation_factor)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m new_state_w_rate \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m         (\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m             torch\u001b[39m.\u001b[39mTensor([current_decimation_factor])\u001b[39m.\u001b[39mto(device)\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m         dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=80'>81</a>\u001b[0m     )\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ottersome/Research/SamplingReconstruction/exp3.6.left_right.ipynb#W6sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m states\u001b[39m.\u001b[39mappend(new_state_w_rate\u001b[39m.\u001b[39mto(device))\n",
+      "File \u001b[0;32m~/Research/SamplingReconstruction/samprecon/environments/OneEpisodeEnvironments.py:90\u001b[0m, in \u001b[0;36mMarkovianUniformCumulativeEnvironment.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     81\u001b[0m new_state \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor(\n\u001b[1;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate_generator\u001b[39m.\u001b[39msample(action, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_budget)\n\u001b[1;32m     83\u001b[0m )\u001b[39m.\u001b[39mto(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice)\n\u001b[1;32m     85\u001b[0m new_state_oh \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mone_hot(\n\u001b[1;32m     86\u001b[0m     new_state\u001b[39m.\u001b[39mview(\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39mlong),\n\u001b[1;32m     87\u001b[0m     num_classes\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate_generator\u001b[39m.\u001b[39mmax_state \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m,\n\u001b[1;32m     88\u001b[0m )\u001b[39m.\u001b[39mfloat()\n\u001b[0;32m---> 90\u001b[0m dec_state \u001b[39m=\u001b[39m differentiable_uniform_sampler(new_state_oh, action)\n\u001b[1;32m     92\u001b[0m reconstruction \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreconstructor(\n\u001b[1;32m     93\u001b[0m     dec_state,\n\u001b[1;32m     94\u001b[0m     action,\n\u001b[1;32m     95\u001b[0m     \u001b[39m# 1 + torch.ceil(action.squeeze() * (self.sampling_budget - 1)),\u001b[39;00m\n\u001b[1;32m     96\u001b[0m )\u001b[39m.\u001b[39msqueeze(\u001b[39m0\u001b[39m)\n\u001b[1;32m     98\u001b[0m logsoft_recon \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mlog_softmax(reconstruction, dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m~/Research/SamplingReconstruction/samprecon/samplers/spatial_transformers.py:76\u001b[0m, in \u001b[0;36mdifferentiable_uniform_sampler\u001b[0;34m(input_signals, decimation_interval)\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[39m# Esignal_length = len(input_signals)\u001b[39;00m\n\u001b[1;32m     75\u001b[0m batch_size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m  \u001b[39m# for now\u001b[39;00m\n\u001b[0;32m---> 76\u001b[0m mask \u001b[39m=\u001b[39m generate_sigmoid_mask(batch_size, signal_length, decimation_interval)\u001b[39m.\u001b[39mview(\n\u001b[1;32m     77\u001b[0m     \u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m\n\u001b[1;32m     78\u001b[0m )\n\u001b[1;32m     79\u001b[0m mask \u001b[39m=\u001b[39m mask\u001b[39m.\u001b[39mrepeat_interleave(input_signals\u001b[39m.\u001b[39mshape[\u001b[39m2\u001b[39m], dim\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m     80\u001b[0m \u001b[39mif\u001b[39;00m input_signals\u001b[39m.\u001b[39mis_cuda:\n",
+      "File \u001b[0;32m~/Research/SamplingReconstruction/samprecon/samplers/spatial_transformers.py:55\u001b[0m, in \u001b[0;36mgenerate_sigmoid_mask\u001b[0;34m(batch_size, signal_length, decimation_intervals, sharpness)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(signal_length):\n\u001b[1;32m     53\u001b[0m     jeep \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor([j])\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     54\u001b[0m     distance_to_nearest_sample \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmin(\n\u001b[0;32m---> 55\u001b[0m         torch\u001b[39m.\u001b[39mfmod(jeep, decimation_intervals[i]),\n\u001b[1;32m     56\u001b[0m         \u001b[39m# decimation_intervals[i]\u001b[39;00m\n\u001b[1;32m     57\u001b[0m         torch\u001b[39m.\u001b[39mTensor(decimation_intervals[i])\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     58\u001b[0m         \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mfmod(jeep, decimation_intervals[i]),\n\u001b[1;32m     59\u001b[0m     )\n\u001b[1;32m     60\u001b[0m     distance \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor((distance_to_nearest_sample, \u001b[39m10\u001b[39m))\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     61\u001b[0m     distance_m \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmin(distance)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
      ]
     }
    ],
@@ -196,7 +204,7 @@
     "    states = [\n",
     "        torch.cat(\n",
     "            (\n",
-    "                current_decimation_factor,\n",
+    "                torch.Tensor([current_decimation_factor]).to(device).view(1,1),\n",
     "                env.reset(current_decimation_factor).view(1, -1).to(device),\n",
     "            ),\n",
     "            dim=-1,\n",
@@ -213,15 +221,14 @@
     "            device\n",
     "        )  # So as to not sample 0 (and end up dividing by zero)\n",
     "        \n",
-    "        current_decimation_factor += torch.Tensor(decimation_steps[sampled_action.item()]).to(torch.long).to(device)\n",
+    "        current_decimation_factor += decimation_steps[sampled_action.item()]\n",
     "        current_decimation_factor = max(1,min(current_decimation_factor, max_decimation))\n",
     "        \n",
-    "        #TODO: Make batch friendly\n",
     "        dec_steps = (\n",
     "            torch.arange(\n",
     "                0,\n",
-    "                current_decimation_factor.squeeze() * sampling_budget,\n",
-    "                current_decimation_factor.squeeze(),\n",
+    "                current_decimation_factor * sampling_budget,\n",
+    "                current_decimation_factor,\n",
     "            )\n",
     "            .view(-1, 1)\n",
     "            .to(device)\n",
@@ -238,7 +245,7 @@
     "\n",
     "        new_state_w_rate = torch.cat(\n",
     "                (\n",
-    "                    current_decimation_factor,\n",
+    "                    torch.Tensor([current_decimation_factor]).to(device).view(1,1),\n",
     "                    new_state\n",
     "                ),\n",
     "                dim=-1,\n",
@@ -246,7 +253,7 @@
     "\n",
     "        states.append(new_state_w_rate.to(device))\n",
     "        rewards.append(regret)\n",
-    "        log_probs.append(dist.log_prob(sampled_action))\n",
+    "        log_probs.append(dist.log_prob(current_decimation_factor - 1))\n",
     "\n",
     "        sbar.set_description(f\"At step {step}, Regret: {regret}\")\n",
     "        sbar.update(1)\n",
@@ -417,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
